--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 deploy:
   type: git
-  repository: git@github.com:liyunchen/liyunchen.github.io.git
+  repository: git@github.com:Boldrain/Boldrain.github.io.git
   branch: main
